# cradle-backend-v1

./: .gitignore  ACCOUNT_GENERATOR.md  API_DOCS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_MODEL.md  TIMESERIES_AGGREGATOR.md  TYPESCRIPT_API_BLUEPRINT.md  nixpacks.toml  railway.toml  rust-toolchain.toml  simulated_accounts.json
.github/workflows/: docker-deploy.yml
docs/: order-book-semantics.md
migrations/2025-10-25-165016-0000_accounts/: down.sql  up.sql
migrations/2025-10-25-215016-0000_asset_book/: down.sql  up.sql
migrations/2025-10-26-080817-0000_markets/: down.sql  up.sql
migrations/2025-10-26-095909-0000_markets_time_series/: down.sql  up.sql
migrations/2025-10-26-112458-0000_orderbook/: down.sql  up.sql
migrations/2025-10-26-133812-0000_order_book_trades/: down.sql  up.sql
migrations/2025-10-26-141705-0000_order_types/: down.sql  up.sql
migrations/2025-10-26-182020-0000_account_token_book/: down.sql  up.sql
migrations/2025-10-26-202026-0000_lending_pools/: down.sql  up.sql
migrations/2025-10-26-212922-0000_loans/: down.sql  up.sql
migrations/2025-10-26-215759-0000_pool_supply/: down.sql  up.sql
migrations/2025-10-26-222231-0000_add_transactions/: down.sql  up.sql
migrations/2025-10-29-200731-0000_kvstore/: down.sql  up.sql
migrations/2025-10-29-205741-0000_update_timeseries_interval_type/: up.sql
migrations/2025-11-11-100425_account_asset_ledger/: down.sql  up.sql
migrations/2025-11-14-140433_listings/: down.sql  up.sql
migrations/2025-11-17-105854_lending_pool_yield_asset_field/: down.sql  up.sql
migrations/2025-11-20-145219_loan_collateral_asset/: down.sql  up.sql
migrations/2025-11-21-085035_new_account_types/: down.sql  up.sql
migrations/2025-11-21-092713_lending_pool_support_wallets/: down.sql  up.sql
migrations/2026-01-07-012108_lending_pool_oracle_prices/: down.sql  up.sql
src/: action_router.rs  cli_helper.rs  lib.rs  main.rs  schema.rs  sockets.rs
src/accounts/: config.rs  db_types.rs  mod.rs  operations.rs  processor.rs  processor_enums.rs
src/accounts_ledger/: db_types.rs  mod.rs  operations.rs  sql_queries.rs
(+108 files in other folders)
