[package]
name = "cradle-back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bigdecimal = {version =  "0.4.9", features = ["serde", "serde_json"] }
chrono = { version =  "0.4.42", features = ["serde", "clock"] }
clap = {version =  "4.5.50", features = ["env", "derive"] }
diesel = {version= "2.3.3", features = ["postgres", "uuid", "serde_json", "numeric", "r2d2", "chrono"] }
diesel-derive-enum = { version =  "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
serde = {version =  "1.0.228", features = ["derive", "rc"] }
serde_json = {version = "1.0.145", features = ["preserve_order"]}
tokio = { version =  "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
contract-integrator = { path = "../cradle-dev/cradle-offchain/contract-integrator" }
